# cineMate

./: .gitignore  CHANGELOG.md  ISSUE_worker_eventbus.md  PR_DESCRIPTION.md  README.md  README_zh.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: human_in_the_loop.md  p0_critical_fixes.md
.github/workflows/: test.yml
cine_mate/adapters/: __init__.py  base.py  factory.py  kling_provider.py  mock_provider.py  runway_provider.py
cine_mate/agents/: director_agent.py
cine_mate/api/: __init__.py  main.py  schemas.py
cine_mate/cli/: __init__.py  __main__.py  commands.py  main.py  video_git.py
cine_mate/config/: __init__.py  defaults.yaml  loader.py  models.py  validator.py
cine_mate/core/: models.py  store.py
cine_mate/engine/: __init__.py  dag.py  fsm.py  orchestrator.py  queue_integration.py
cine_mate/infra/: README.md  __init__.py  event_bus.py  queue.py  schemas.py  worker.py
cine_mate/skills/: __init__.py  models.py  skill_indexer.py  skill_loader.py  skill_reviewer.py  skill_store.py
docs/: CineMate_Business_Plan_v1.0.md  agentscope_guide.md  architecture.md  code_review_sprint1_day3.md  development_plan.md  user_manual.md
docs/PMO/: PR10_review.md  PR12_review.md  PR13_review.md  PR14_review.md  PR15_review.md  PR16_review.md  PR17_review.md  PR23_review.md  PR24_review.md  PR25_review.md  PR27_review.md  PR28_review.md  PR30_review.md  PR31_review.md  PR32_review.md  PR33_review.md  PR43_review.md  PR44_review.md  PR45_review.md  PR46_review.md  PR47_review.md  PR48_review.md  PR55_review.md  PR56_review.md  PR57_review.md  PR58_review.md  PR59_review.md  TEAM_KICKOFF.md  architecture_review_status_update.md  claude_day5_tasks.md  (+44 more)
memory/: 2026-04-21.md  2026-04-23.md  2026-04-24.md  2026-04-25.md
prompts/: intent_v1.md
scripts/: demo_mvp.py  demo_real_agent.py  demo_sprint2.py
tests/: conftest.py  test_async_orchestrator.py  test_cases_intent.json  test_director_agent.py  test_dirty_propagation.py  test_engine_tools.py  test_integration_multi_node.py  test_orchestrator.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js
(+79 files in other folders)
