[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemate"
version = "0.1.0"
description = "AI Video Production OS: Director Agent + Incremental Change Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19.0",
    "networkx>=3.1",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.0.280",
]

[project.scripts]
cinemate = "cine_mate.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["cine_mate*", "tests*"]
exclude = ["memory*", "prompts*", "docs*"]
